chore: deps upgrade

--- a/package.json
+++ b/package.json
@@ -19,40 +19,40 @@
     "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.26.2",
-    "@iconify-json/carbon": "^1.1.5",
-    "@iconify-json/fluent-emoji": "^1.1.0",
+    "@antfu/eslint-config": "^0.39.8",
+    "@iconify-json/carbon": "^1.1.18",
+    "@iconify-json/fluent-emoji": "^1.1.13",
     "@moo-ui/components": "workspace:*",
     "@moo-ui/preset": "workspace:*",
     "@moo-ui/utils": "workspace:*",
-    "@types/node": "^18.7.13",
-    "@unocss/preset-mini": "^0.45.12",
-    "@unocss/preset-uno": "^0.45.12",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vitest/coverage-c8": "^0.22.1",
-    "@vitest/ui": "0.22.1",
-    "@vue/test-utils": "^2.0.0",
-    "@vueuse/core": "^9.1.1",
-    "bumpp": "^8.2.1",
-    "eslint": "8.22.0",
-    "eslint-plugin-import": "^2.26.0",
-    "esno": "^0.16.3",
-    "jsdom": "^20.0.0",
+    "@types/node": "^20.4.4",
+    "@unocss/preset-mini": "^0.53.6",
+    "@unocss/preset-uno": "^0.53.6",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/ui": "0.33.0",
+    "@vue/test-utils": "^2.4.1",
+    "@vueuse/core": "^10.2.1",
+    "bumpp": "^9.1.1",
+    "eslint": "8.45.0",
+    "eslint-plugin-import": "^2.27.5",
+    "esno": "^0.17.0",
+    "jsdom": "^22.1.0",
     "moo-ui": "workspace:*",
-    "rimraf": "^3.0.2",
-    "sass": "^1.54.3",
-    "tsup": "^6.2.1",
-    "typescript": "^4.7.4",
-    "unbuild": "^0.8.9",
-    "unocss": "^0.45.12",
-    "unplugin-auto-import": "0.11.2",
-    "unplugin-vue-components": "0.22.4",
-    "vite": "^3.0.9",
-    "vite-plugin-dts": "^1.4.1",
-    "vite-plugin-inspect": "^0.6.0",
+    "rimraf": "^5.0.1",
+    "sass": "^1.64.1",
+    "tsup": "^7.1.0",
+    "typescript": "^5.1.6",
+    "unbuild": "^1.2.1",
+    "unocss": "^0.53.6",
+    "unplugin-auto-import": "0.16.6",
+    "unplugin-vue-components": "0.25.1",
+    "vite": "^4.4.6",
+    "vite-plugin-dts": "^3.3.1",
+    "vite-plugin-inspect": "^0.7.33",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vitepress": "1.0.0-alpha.9",
-    "vitest": "0.22.1",
-    "vue": "^3.2.37"
+    "vitepress": "1.0.0-beta.6",
+    "vitest": "0.33.0",
+    "vue": "^3.3.4"
   }
 }
